--- a/estilos.css
+++ b/estilos.css
@@ -28,4 +28,13 @@ iframe {
     width: 100%;
     height: 660px;
 }
-
+#map-container {
+    height: 100vh ;
+    width: 100vw ;
+    top: 0;
+    left: 0;
+}
+#map {
+    height: 100%;
+    width: 100%;
+}
